# grove

./: .gitignore  .grove.toml  .summoner.toml  AGENTS.md  ASSURANCE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.config/: nextest.toml
.github/workflows/: ci.yml  generate-release.mjs  qualify-release-assets.mjs  release-qualification.yml  release.yml
benchmark/: README.md  fixture.mjs  head_to_head.mjs  multi_agent.sh  ripgrep.sh
benchmark/reports/2026-07-21-macos-apfs-ripgrep-14.1.1/: report.json  summary.md
crates/grove-core/: Cargo.toml
crates/grove-core/src/: claim.rs  events.rs  git.rs  lib.rs  recovery.rs  scope.rs  snapshot.rs  snapshot_capture.rs  snapshot_capture_filesystem.rs  snapshot_index.rs  snapshot_read_only.rs  snapshot_read_only_tests.rs  task.rs  verification.rs  verification_retention.rs  worktree.rs  worktree_salvage.rs  worktree_salvage_archive.rs  worktree_salvage_git.rs
crates/grove-rust/: Cargo.toml
crates/grove-rust/src/: api.rs  artifact.rs  cache.rs  cache_atomic_tests.rs  cache_gc.rs  cache_gc_tests.rs  cache_lane.rs  cache_lane_acquire.rs  cache_lane_tests.rs  cache_lifecycle.rs  cache_lifecycle_tests.rs  cache_retention.rs  cache_seed.rs  candidate.rs  capabilities.rs  claim.rs  claim_scope.rs  config.rs  config_governor.rs  config_tests.rs  doctor_config.rs  doctor_config_home.rs  fingerprint.rs  gitgate.rs  governor.rs  governor_lock.rs  governor_process.rs  governor_tests.rs  impact.rs  init.rs  inspection.rs  inspection_process.rs  inspection_process_unix.rs  inspection_process_windows.rs  inspection_readonly.rs  inspection_snapshot.rs  inspection_snapshot_files.rs  inspection_snapshot_git.rs  inspection_snapshot_hardening_tests.rs  inspection_snapshot_lifecycle.rs  (+54 more)
docs/: quickstart.md  reference.md
scripts/: qualify-local.sh
src/: api.rs  artifact.rs  build_cli.rs  cache.rs  cache_atomic.rs  cache_gc.rs  cache_lane.rs  cache_lifecycle.rs  cache_lifecycle_tests.rs  claim.rs  claim_scope.rs  cli.rs  config.rs  coordination_cli.rs  doctor.rs  doctor_config.rs  doctor_config_portable.rs  doctor_config_profiles.rs  doctor_watchlist.rs  events.rs  git.rs  governor.rs  impact.rs  init.rs  lib.rs  main.rs  materialization_cargo.rs  materialization_git.rs  materialization_plan.rs  materialization_plan_tests.rs  materialization_source.rs  materialization_tree.rs  mcp_cli.rs  project.rs  recovery.rs  release.rs  release_bundle.rs  release_publish_pin.rs  release_snapshot.rs  release_snapshot_tests.rs  (+36 more)
tests/: api.rs  artifact.rs  artifact_cli.rs  bootstrap.rs  build_cli.rs  cache.rs  cache_gc_hardening.rs  cache_retention.rs  candidate.rs  claim.rs  claim_ttl.rs  concurrency.rs  config_isolation.rs  doctor.rs  events.rs  evidence_gc.rs  gitgate.rs  governor.rs  init.rs  inspection_cli.rs  lifecycle_gate.rs  maintenance.rs  materialization_build.rs  materialization_cargo.rs  materialization_cli.rs  materialization_git.rs  materialization_opaque.rs  materialization_opaque_lifecycle.rs  materialization_recovery.rs  materialization_scope.rs  mcp.rs  non_rust.rs  portable_receipts.rs  recovery.rs  release.rs  seed_purge.rs  snapshot.rs  swarm.rs  task.rs  verify.rs  (+7 more)
tests/recovery/: authority.rs
tests/worktree_salvage/: recovery.rs
