[package]
name = "grove"
version = "0.3.0"
edition = "2024"
description = "A build cache and worktree manager for Rust projects worked on by many agents at once: copy-on-write build lanes, git-diff routing, and automatic worktree cleanup."
license = "MIT"
repository = "https://github.com/thomgardiner/grove"
readme = "README.md"
keywords = ["cargo", "build", "worktree", "cache", "agent"]
categories = ["development-tools::cargo-plugins"]
# The published crate is pure Rust; the Node benchmark harness stays repo-only.
exclude = ["benchmark/"]

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
reflink-copy = "0.1"
walkdir = "2"
cargo_metadata = "0.18"
fs2 = "0.4"
notify = "6"
toml = "0.8"
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
