[package]
name = "grove"
version = "0.4.0"
edition = "2024"
description = "A build cache and worktree manager for Rust projects worked on by many agents at once: copy-on-write build lanes, git-diff routing, and automatic worktree cleanup."
license = "MIT"
repository = "https://github.com/thomgardiner/grove"
homepage = "https://github.com/thomgardiner/grove"
readme = "README.md"
keywords = ["cargo", "build", "worktree", "cache", "agent"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
publish = false
# The published crate is pure Rust; the Node benchmark harness stays repo-only.
exclude = ["benchmark/"]

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
grove-core = { path = "crates/grove-core", version = "0.4.0" }
grove-rust = { path = "crates/grove-rust", version = "0.4.0" }

[dev-dependencies]
fs2 = "0.4"
sha2 = "0.11"
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
tempfile = "3"

[target.'cfg(unix)'.dev-dependencies]
rustix = { version = "1", features = ["fs"] }

[workspace]
members = ["crates/grove-core", "crates/grove-rust"]
resolver = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[profile.dist]
inherits = "release"

[package.metadata.dist]
dist = true
