[package]
name = "grove-core"
version = "0.3.2"
edition = "2024"
description = "Language-neutral coordination primitives for Grove."
license = "MIT"
repository = "https://github.com/thomgardiner/grove"

[dependencies]
anyhow = "1"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile = "3"
