[package]
name = "grove-rust"
version = "0.3.4"
edition = "2024"
description = "Rust and Cargo acceleration for Grove."
license = "MIT"
repository = "https://github.com/thomgardiner/grove"
publish = false

[dependencies]
anyhow = "1"
cargo_metadata = "0.23"
fs2 = "0.4"
grove-core = { path = "../grove-core", version = "0.3.4" }
notify = "8"
reflink-copy = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
toml = "1.1"
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "1", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
